# ordo

./: '  Cargo.toml  bothtest.txt  bothtest.txt.txt  combined_texts.txt  combined_texts2.txt  test.txt  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  throughput.txt
src/: '  .best_multi_params-70ms.rs.swp  .fifo.rs.swp  .main.rs.swp  .params.rs.swp  .process.rs.swn  .process.rs.swo  .process.rs.swp  .run.sh.swp  .test1.rs.swp  best_multi_params-70ms.rs  both1.txt  bothsingle.txt  bothtest.txt.txt  bothtestiesz.txt  bothx.txt  fifo.rs  fifo_cp.rs  log_parser.rs  main.rs  metric.rs  metrics.rs  params.rs  peripherals.rs  process.rs  rdd.rs  run.sh  run_multiple.sh  run_runtime.sh  runtime.txt  test.txt  test1.rs  test_base.rs  test_base_slices.rs  test_multi.rs  test_process.rs  test_procrunner.rs  test_val_base.rs  test_val_multi.rs  throughputsingle.txt
src/log_parser/: .apply_regex.rs.swp  .file_reader.rs.swn  .file_reader.rs.swo  .file_reader.rs.swp  .log_parser.rs.swp  .mod.rs.swp  .output_results.rs.swp  .split_string.rs.swp  apply_regex.rs  clean_queue.rs  file_reader.rs  log_parser.rs  mod.rs  output_results.rs  split_string.rs  split_string_im.rs
src/tests/: .mod.rs.swp  .test.txt.swp  .test1.rs.swp  .test_base.rs.swp  .test_base_slices.rs.swp  .test_multi.rs.swp  .test_multi_0.rs.swp  .test_val_base.rs.swp  .test_val_base_slices.rs.swp  .test_val_multi.rs.swp  mod.rs  test.txt  test1.rs  test_base_slices.rs  test_multi.rs  test_multi_0.rs  test_val_base.rs  test_val_base_slices.rs  test_val_multi.rs
