cargo-features = ["edition2021"]
[package]
name = "ordo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.11" }
crossbeam-utils = "0.8"
ctrlc = { version = "3.0", features = ["termination"] }
urandom = "0.1.0"
rand = "0.4"
threadpool = "1.8.1"
cortex-m = "0.7.3"
memmap = "0.7.0"
regex = "1.5.4"
lazy_static = "1.4.0"
arr_macro = "0.1.3"
